<resources>
    <string name="app_name" translatable="false">Stock App</string>
    <string name="title_activity_fragment_portfolio" translatable="false">fragmentPortfolio</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="text_price">Current price: </string>
    <string name="text_name">Name: </string>
    <string name="text_oprice">Opening price: </string>
    <string name="text_percent">Percent change: </string>
    <string name="text_volume">Volume: </string>
    <string name="text_view">View Stock </string>
    <string name="text_add">Add Stock </string>
    <string name="text_delete">Delete</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_confirm">Confirm</string>
    <string-array name="spinner_text">
        <item>1 day</item>
        <item>5 days</item>
        <item>1 month</item>
        <item>6 months</item>
        <item>1 year</item>

    </string-array>
</resources>
